# Bazaar

./: .gitignore  Procfile  pyproject.toml
frontend/static/frontend/: asset-manifest.json  index.html
frontend/static/frontend/static/js/: 787.18c0c450.chunk.js  787.18c0c450.chunk.js.map  main.34f3408b.js  main.34f3408b.js.map  main.36ac0807.js  main.36ac0807.js.map  main.5edcde49.js  main.5edcde49.js.map  main.7932eb1d.js  main.7932eb1d.js.map  main.7c041817.js  main.7c041817.js.map  main.c062d691.js  main.c062d691.js.map
projectJ/: asgi.py  urls.py  wsgi.py
projectJ/config/: base.py  devHeroku.py  development.py
store/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_store_created_store_lastupdated_product.py  0003_product_publish.py  0004_store_shop_img.py  0005_product_shop_img.py  0006_remove_product_shop_img_product_product_img.py  0007_product_available_quantity_alter_product_product_img_and_more.py
tutorial/: urls.py
