[tool.poetry]
name = "project-j"
version = "0.1.0"
description = ""
authors = ["Bharadwaj LS <lsbharadwaj@lrde.com>"]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.13.1"
Django = "^4.0.1"
drf-social-oauth2 = "^1.1.4"
django-rest-registration = "^0.7.0"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.4"
django-sslserver = "^0.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
